# LiveRPG

./: .flake8  .gitignore  API.py  Datbase.md  EmptyDatabase.db  LICENSE  README.md  compose.yaml  deploy.ps1  docker-compose.yaml  dockerfile  nginx.conf  pyproject.toml  startServer.sh  test.db
API/: API.py
APIManager/: characterRequest.py  eventRequest.py  informationRequest.py  request.py
database/: API.py  Datbase.md  EmptyDatabase.db  TestDatabase.db  dockerfile  dockerfile.old  ntfy.py  pyproject.toml
database/databaseManager/: characterConsults.py  eventActions.py  infoActions.py  userConsults.py
database/routers/: characterActions.py  characterConsults.py  eventActions.py  eventConsults.py  informationActions.py  informationConsults.py  mockBomb.py  responseHandling.py  transmissor.py
databaseManager/: characterActions.py  characterConsults.py  databaseManager.py  eventActions.py  eventConsults.py  infoActions.py  infoConsults.py  userActions.py  userConsults.py
routers/: characterActions.py  characterConsults.py  eventActions.py  eventConsults.py  informationActions.py  informationConsults.py  responseHandling.py
script/: buildProduction.sh  buildTestApi.sh  buildTestServer.sh
scripts/: waitToServerOnline.py
scripts/linux/: startServer.sh
scripts/windows/: clean.ps1  deploy.ps1  deployTestImage.ps1  updateWebsite.ps1
tests/: testAPI.py  testCharacterAPI.py  testCharacterTable.py  testDatabaseManager.py  testEventAPI.py  testEventTable.py  testFull.py  testInformationAPI.py  testInformationTable.py  testUserTable.py
tests/APIManager/: request.py
web/: dockerfile  index.html  login.html
(+25 files in other folders)
