[tool.poetry]
name = "none"
version = "0.1"
description = ""
authors = ["Iñaki Arrondo <main@artic42.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
articlib = "^0.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
