[tool.poetry]
name = "databaseManager"
version = "0.1"
description = ""
authors = ["Iñaki Arrondo <main@artic42.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
articlib = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
