[tool.poetry]
name = "database"
version = "0.1"
description = ""
authors = ["Iñaki Arrondo <main@artic42.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
articlib = "^0.2.3"
fastapi = "^0.111.1"
requests = "^2.32.3"
uvicorn = "^0.31.0"

[tool.poetry.scripts]
api = "database.API:start"

[tool.docker]
expose = [8000]
cmd = ["api"]
tag = ["saphir_blue_api:latest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
